<resources>
    <string name="app_name">Pipe Calculator</string>
    <string name="diameter">Diameter</string>
    <string name="wall_thick">Wall Thick</string>
    <string name="length_min">Length Min</string>
    <string name="length_max">Length Max</string>
    <string name="pieces">Pieces</string>
    <string name="enter">ENTER</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    <string name="d32">32</string>
    <string name="d33">33</string>
    <string name="d38">38</string>
    <string name="d42">42</string>
    <string name="d45">45</string>
    <string name="d48">48</string>
    <string name="d51">51</string>
    <string name="d57">57</string>
    <string name="d60">60</string>
    <string name="d63">63.5</string>
    <string name="d68">68</string>
    <string name="d73">73</string>
    <string name="d76">76</string>
    <string name="d83">83</string>
    <string name="d89">89</string>
    <string name="d102">102</string>
    <string name="d108">108</string>
    <string name="d114">114</string>
    <string name="t30">3.0</string>
    <string name="t35">3.5</string>
    <string name="t40">4.0</string>
    <string name="t45">4.5</string>
    <string name="t50">5.0</string>
    <string name="t55">5.5</string>
    <string name="t60">6.0</string>
    <string name="t65">6.5</string>
    <string name="t70">7.0</string>
    <string name="in_millimeters">in millimeters</string>
    <string name="in_meters">in meters</string>
</resources>
