<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trifonov.kos.pipeweightcalculator.DigitsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64sp"
            android:text="@string/zero"
            android:singleLine="true" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <TextView
                style="@style/calc_button"
                android:text="@string/one"
                android:onClick="onDigitClick" />

            <ImageView style="@style/divider" />

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:text="@string/two"
                android:onClick="onDigitClick" />

            <ImageView style="@style/divider" />

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/three"
                android:onClick="onDigitClick" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/four"
                android:onClick="onDigitClick" />

            <ImageView style="@style/divider" />

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/five"
                android:onClick="onDigitClick" />

            <ImageView style="@style/divider" />

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/six"
                android:onClick="onDigitClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/seven"
                android:onClick="onDigitClick" />

            <ImageView style="@style/divider" />

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/eight"
                android:onClick="onDigitClick" />

            <ImageView style="@style/divider" />

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nine"
                android:onClick="onDigitClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/clear"
                android:onClick="onDigitClick" />

            <ImageView style="@style/divider" />

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zero"
                android:onClick="onDigitClick" />

            <ImageView style="@style/divider" />

            <TextView
                style="@style/calc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dot"
                android:onClick="onDigitClick" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/enter"
            android:textColor="#ffffff"
            android:onClick="onEnterClick" />
    </LinearLayout>

</LinearLayout>
